# scar

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
examples/traces/: failing_trace.jsonl  loop_trace.jsonl
src/postmortem/: __init__.py  case.py  cli.py  cluster.py  distill.py  runner.py
src/postmortem/ingest/: __init__.py  base.py  jsonl.py  langchain.py  otel.py
tests/: test_case.py  test_cluster.py  test_distill.py  test_ingest.py  test_runner.py
