[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postmortem"
version = "0.1.0"
description = "Turn production agent failures into reusable regression test cases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nous Research" }]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.scripts]
postmortem = "postmortem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postmortem"]
